cabal-version:      2.4
name:               hasql-opentelemetry
version:            0.1.0.0
license:            MIT
copyright:          2023 Michal Kleczek
maintainer:         michal@kleczek.org
author:             Michal Kleczek
category:           Database

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls -Wno-orphans
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base
    , hasql
    , hasql-api
    , hasql-transaction
    , bytestring
    , transformers
    , unliftio
    , hs-opentelemetry-api
    , postgresql-libpq
    , text
    , iproute

  hs-source-dirs:     src
  default-language:   Haskell2010

library
  import:  shared
  exposed-modules:
    Hasql.OpenTelemetry
    Hasql.OpenTelemetry.Session
    Hasql.OpenTelemetry.Transaction
